--- a/action.yml
+++ b/action.yml
@@ -61,6 +61,8 @@ inputs:
     description: 'Specify the custom requesting agents to be used when performing HTTP and HTTPS requests respectively.'
   cookieJar:
     description: 'Pass a CookieJar file path as string to this property that will be deserialized using tough-cookie.'
+  globalVar:
+    description: 'One can optionally pass global environment variables as an array of key-value string object pairs.'
 runs:
   using: 'node12'
   main: 'dist/index.js'
